Fixed fxLayout issues by deleting the fxLayouts from the html. Go figure.

--- a/src/app/training/new-training/new-training.component.css
+++ b/src/app/training/new-training/new-training.component.css
@@ -2,3 +2,6 @@
     padding: 30px;
     display: block;
 }
+.mat-card {
+    margin-left: 65px;
+}
