--- a/src/app/welcome/welcome.component.css
+++ b/src/app/welcome/welcome.component.css
@@ -1,3 +1,7 @@
 .welcome {
-    text-align: center;
+    padding: 30px;
+    display: block;
+}
+.mat-card {
+    margin-left: 65px;
 }
